[gd_scene load_steps=45 format=2]

[ext_resource path="res://Resources/UI/button_normal.png" type="Texture" id=1]
[ext_resource path="res://Resources/UI/FredokaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/UI/button_hover.png" type="Texture" id=3]
[ext_resource path="res://Resources/UI/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Resources/squidward_gif.png" type="Texture" id=6]
[ext_resource path="res://Resources/Background.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 500, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 1500, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 2000, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 500, 500, 500 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 500, 500, 500, 500 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 1000, 500, 500, 500 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 1500, 500, 500, 500 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 2000, 500, 500, 500 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 1000, 500, 500 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 500, 1000, 500, 500 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 1000, 1000, 500, 500 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 1500, 1000, 500, 500 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 2000, 1000, 500, 500 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 0, 1500, 500, 500 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 500, 1500, 500, 500 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 1000, 1500, 500, 500 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 1500, 1500, 500, 500 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 2000, 1500, 500, 500 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 0, 2000, 500, 500 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 500, 2000, 500, 500 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 1000, 2000, 500, 500 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 1500, 2000, 500, 500 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 2000, 2000, 500, 500 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 2500, 500, 500 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 500, 2500, 500, 500 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 1000, 2500, 500, 500 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 1500, 2500, 500, 500 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 2000, 2500, 500, 500 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 0, 3000, 500, 500 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 500, 3000, 500, 500 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 1000, 3000, 500, 500 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 1500, 3000, 500, 500 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 2000, 3000, 500, 500 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="Menu"]
texture = ExtResource( 7 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gif1" type="AnimatedSprite" parent="Menu/CenterContainer"]
position = Vector2( 460, 540 )
frames = SubResource( 37 )
frame = 3
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 780.0
margin_top = 228.0
margin_right = 1140.0
margin_bottom = 852.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 120.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 360.0
margin_bottom = 244.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/Level2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 360.0
margin_bottom = 368.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/Level3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 372.0
margin_right = 360.0
margin_bottom = 492.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/Level4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 496.0
margin_right = 360.0
margin_bottom = 500.0

[node name="Settings" type="TextureButton" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 360.0
margin_bottom = 624.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Menu/CenterContainer/VBoxContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gif2" type="AnimatedSprite" parent="Menu/CenterContainer"]
position = Vector2( 1460, 540 )
frames = SubResource( 37 )
frame = 2
playing = true
flip_h = true

[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Level1" to="." method="_on_Level_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Level2" to="." method="_on_Level_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Level3" to="." method="_on_Level_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Level4" to="." method="_on_Level_pressed" binds= [ 4 ]]
